Actions
Bug #21011
closedConstant massign segfaults in parse.y with shareable_constant_value: experimental_everything
Bug #21011:
Constant massign segfaults in parse.y with shareable_constant_value: experimental_everything
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.5.0dev (2025-01-06T01:50:53Z master c8e3d745fa) [x86_64-linux]
Description
Updated by nobu (Nobuyoshi Nakada) over 1 year ago
Updated by nobu (Nobuyoshi Nakada) over 1 year ago
- Status changed from Open to Closed
Applied in changeset git|b81db531b24a6824bf5b89d8460baed5d5418835.
[Bug #21011] nd_value is NULL in massign
Actions