[Bug #21011] `nd_value` is NULL in massign